tests/ui/error-codes/E0092.rs
#![feature(intrinsics)]
extern "crablang-intrinsic" {
    fn atomic_foo(); //~ ERROR E0092
}

fn main() {
}
